initial refactor of app to Spring Security 5