@@ -13,7 +13,6 @@ import org.springframework.security.oauth2.server.resource.authentication.JwtAut
 import org.springframework.security.test.context.support.WithSecurityContextFactory;
 
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -31,25 +30,29 @@ public class WithMockJwtSecurityContextFactory implements WithSecurityContextFac
 
 
         // if issuedAt time was not set, default it to the Instant.now()
-        Instant issuedAt = annotation.issuedAtMs() == 0 ? Instant.now() : Instant.ofEpochMilli( annotation.issuedAtMs() );
+        Instant issuedAt = annotation.issuedAtMs() == 0 ? Instant.now() : Instant.ofEpochMilli(annotation.issuedAtMs());
 
         // build a JWT string with the specified subject and scopes
-        String jwtStr = ((BlogenJwtService) jwtService).builder()
-                .withSubject( annotation.subject() )
-                .withIssuedAt( issuedAt )
-                .withScopes( Arrays.asList( annotation.scopes() ))
-                .buildToken();
+        String jwtStr = ((BlogenJwtService) jwtService)
+                .generateToken(
+                        annotation.subject(),
+                        List.of(annotation.scopes()),
+                        issuedAt,
+                        60L
+                );
+
         // decode the jwt string into Spring Security's Jwt object
         final Jwt jwt = jwtDecoder.decode(jwtStr);
 
         // store authorities with "SCOPE_" prepended in order to indicate these are authorities from JWT scopes
-        List<GrantedAuthority> authorities = jwt.getClaimAsStringList("scope").stream()
-                .map(claim -> new SimpleGrantedAuthority("SCOPE_"+claim))
+        List<GrantedAuthority> authorities = jwt.getClaimAsStringList("scope")
+                .stream()
+                .map(SimpleGrantedAuthority::new)
                 .collect(Collectors.toList());
 
         // store the Jwt as the authenticated principal
-        Authentication auth = new JwtAuthenticationToken( jwt, authorities );
-        context.setAuthentication( auth );
+        Authentication auth = new JwtAuthenticationToken(jwt, authorities);
+        context.setAuthentication(auth);
         return context;
     }
 
